<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#CEC8CECE"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    android:paddingEnd="20dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="#A6C9CCCC"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tV_ime"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="15dp"
                android:padding="2dp"
                android:text="@string/tV_ime"
                android:visibility="visible" />

            <EditText
                android:id="@+id/eT_ime"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTintMode="src_atop"
                android:drawableBottom="@drawable/customborder"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tv_prezime"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tv_prezime" />

            <EditText
                android:id="@+id/eT_prezime"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tV_adresa"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tV_adresa" />

            <EditText
                android:id="@+id/eT_adresa"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/tV_grad"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tV_grad" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:entries="@array/gradovi" />

            <TextView
                android:id="@+id/tV_Oib"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tV_Oib" />

            <EditText
                android:id="@+id/eT_Oib"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/tV_telefon"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/tV_telefon" />

            <EditText
                android:id="@+id/eT_tel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/tV_spol"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/tV_spol" />

            <RadioGroup
                android:id="@+id/rg_spol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rd1_zena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:autoText="true"
                    android:checked="true"
                    android:text="@string/rd1_zena" />

                <RadioButton
                    android:id="@+id/rd2_muskarac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/rd2_muskarac" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="#D7C43967"
                android:onClick="@string/eT_prezime"
                android:shadowColor="#948886"
                android:text="@string/btnSave" />


            <TextView
                android:id="@+id/Tv_Ime_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="15dp"
                android:padding="2dp"
                android:text="@string/Tv_Ime_out"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
            android:id="@+id/Tv_Prezime_out"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="15dp"
            android:padding="2dp"
            android:text="@string/Tv_Prezime_out"
            android:visibility="invisible" />

            <TextView
                android:id="@+id/Tv_Adresa_out"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="15dp"
                android:padding="2dp"
                android:text="@string/Tv_Adresa_out"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/Tv_OIB_out"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="15dp"
                android:padding="2dp"
                android:text="@string/Tv_OIB_out"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/Tv_Spol_out"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="15dp"
                android:padding="2dp"
                android:text="@string/Tv_Spol_out"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/Tv_Grad_out"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="15dp"
                android:padding="2dp"
                android:text="@string/Tv_Grad_out"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/Tv_Telefon_out"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="15dp"
                android:padding="2dp"
                android:text="@string/Tv_Telefon_out"
                android:visibility="invisible" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>

